--- a/conf/config-full.yaml
+++ b/conf/config-full.yaml
@@ -29,6 +29,8 @@ deploy: single
 
 redis:
   # redis type available: none, external
+  # none: means never use redis
+  # external: means use the specific redis instance
   type: none
   url: redis://:sigma@localhost:6379/0
 
@@ -111,7 +113,7 @@ daemon:
     # At 02:00 on Saturday
     cron: 0 2 * * 6
   builder:
-    image: sigma-builder:latest
+    image: ghcr.io/go-sigma/sigma-builder:nightly
     type: docker
     docker:
       sock:
