:sparkles: Upgrade yarn 4.0.2

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -47,6 +47,7 @@ jobs:
         uses: actions/setup-go@v3
         with:
           go-version: ${{ matrix.go }}
+      - run: corepack enable
       - name: Setup node
         uses: actions/setup-node@v3
         with:
@@ -127,6 +128,7 @@ jobs:
         uses: actions/setup-go@v3
         with:
           go-version: ${{ matrix.go }}
+      - run: corepack enable
       - name: Setup node
         uses: actions/setup-node@v3
         with:
@@ -208,6 +210,7 @@ jobs:
         uses: actions/setup-go@v3
         with:
           go-version: ${{ matrix.go }}
+      - run: corepack enable
       - name: Setup node
         uses: actions/setup-node@v3
         with:
