--- a/.github/workflows/local-build.yml
+++ b/.github/workflows/local-build.yml
@@ -27,6 +27,7 @@ jobs:
         uses: actions/setup-go@v3
         with:
           go-version: ${{ matrix.go }}
+      - run: corepack enable
       - name: Setup node
         uses: actions/setup-node@v3
         with:
