--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -39,13 +39,12 @@ jobs:
           cd web
           yarn install --frozen-lockfile
           yarn build
-          cd ..
-          make build
       - name: Setup golangci-lint
         uses: golangci/golangci-lint-action@v3
         with:
-          version: v1.54.2
-          args: --deadline=10m --verbose
+          version: v1.55.2
+          args: --deadline=30m --verbose
+          skip-pkg-cache: true
       - name: Lint Dockerfile
         uses: hadolint/hadolint-action@v3.1.0
         with:
