--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -32,6 +32,7 @@ jobs:
         with:
           fetch-depth: 0
           lfs: true
+      - run: corepack enable
       - name: Setup node
         uses: actions/setup-node@v3
         with:
@@ -41,7 +42,7 @@ jobs:
       - name: Build website
         run: |
           cd docs
-          yarn install --frozen-lockfile
+          yarn install --immutable
           yarn build
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v1
