--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -37,7 +37,7 @@ jobs:
       - name: Build web
         run: |
           cd web
-          yarn install --frozen-lockfile
+          yarn install --immutable
           yarn build
       - name: Setup golangci-lint
         uses: golangci/golangci-lint-action@v3
