--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -57,7 +57,7 @@ jobs:
       - name: Build web
         run: |
           cd web
-          yarn install --frozen-lockfile
+          yarn install --immutable
           yarn build
       - name: Setup minio
         run: |
@@ -138,7 +138,7 @@ jobs:
       - name: Build web
         run: |
           cd web
-          yarn install --frozen-lockfile
+          yarn install --immutable
           yarn build
       - name: Setup minio
         run: |
@@ -220,7 +220,7 @@ jobs:
       - name: Build web
         run: |
           cd web
-          yarn install --frozen-lockfile
+          yarn install --immutable
           yarn build
       - name: Setup minio
         run: |
