--- a/docs/package.json
+++ b/docs/package.json
@@ -15,21 +15,20 @@
     "typecheck": "tsc"
   },
   "dependencies": {
-    "@docusaurus/core": "2.4.3",
-    "@docusaurus/preset-classic": "2.4.3",
-    "@mdx-js/react": "^1.6.22",
-    "clsx": "^1.2.1",
+    "@docusaurus/core": "3.0.0",
+    "@docusaurus/preset-classic": "3.0.0",
+    "@mdx-js/react": "^3.0.0",
     "docusaurus-plugin-sass": "^0.2.5",
-    "prism-react-renderer": "^1.3.5",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "sass": "^1.69.3",
-    "typed.js": "^2.0.12"
+    "prism-react-renderer": "^2.3.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "sass": "^1.69.5",
+    "typed.js": "^2.1.0"
   },
   "devDependencies": {
-    "@docusaurus/module-type-aliases": "2.4.3",
-    "@tsconfig/docusaurus": "^2.0.1",
-    "typescript": "^5.2.2"
+    "@docusaurus/module-type-aliases": "3.0.0",
+    "@tsconfig/docusaurus": "^2.0.2",
+    "typescript": "^5.3.2"
   },
   "browserslist": {
     "production": [
@@ -45,5 +44,6 @@
   },
   "engines": {
     "node": ">=16.14"
-  }
+  },
+  "packageManager": "yarn@4.0.2"
 }
