:hammer: Update dockerfile

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -49,4 +49,4 @@ jobs:
         uses: hadolint/hadolint-action@v3.1.0
         with:
           dockerfile: ./build/Dockerfile
-          ignore: DL3018,DL3003
+          ignore: DL3018,DL3003,SC2155
