--- a/conf/config-dev.yaml
+++ b/conf/config-dev.yaml
@@ -111,6 +111,7 @@ daemon:
     # At 02:00 on Saturday
     cron: 0 2 * * 6
   builder:
+    enabled: false
     image: ghcr.io/go-sigma/sigma-builder:latest
     type: docker
     docker:
