--- a/conf/config.yaml
+++ b/conf/config.yaml
@@ -120,6 +120,7 @@ daemon:
     # At 02:00 on Saturday
     cron: 0 2 * * 6
   builder:
+    enabled: false
     image: sigma-builder:latest
     type: docker
     docker:
