--- a/web/package.json
+++ b/web/package.json
@@ -18,7 +18,7 @@
     "@tailwindcss/forms": "^0.5.7",
     "@tailwindcss/line-clamp": "^0.4.4",
     "@tailwindcss/typography": "^0.5.10",
-    "axios": "^1.6.5",
+    "axios": "^1.6.7",
     "bytemd": "^1.21.0",
     "cron-parser": "^4.9.0",
     "csstype": "^3.1.3",
@@ -33,20 +33,20 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.21.3",
-    "react-toastify": "^9.1.3",
+    "react-toastify": "^10.0.4",
     "react-use": "^17.5.0",
     "xterm": "^5.3.0",
     "xterm-addon-attach": "^0.9.0",
     "xterm-addon-fit": "^0.8.0"
   },
   "devDependencies": {
-    "@types/node": "^20.11.5",
+    "@types/node": "^20.11.14",
     "@types/react": "^18.2.48",
     "@types/react-dom": "^18.2.18",
-    "@vitejs/plugin-react-swc": "^3.5.0",
+    "@vitejs/plugin-react-swc": "^3.6.0",
     "autoprefixer": "^10.4.17",
     "cssnano": "^6.0.3",
-    "json-server": "^0.17.4",
+    "json-server": "^1.0.0-alpha.23",
     "postcss": "^8.4.33",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.3.3",
