:arrow_up: Upgrade docker and minio

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,7 @@ services:
       - /var/run/docker.sock:/var/run/docker.sock
       - ${PWD}/conf:/etc/sigma
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:3000/healthz"]
+      test: ["CMD", "sh", "-c", "nc -z localhost 3000"]
       interval: 10s
       timeout: 5s
       retries: 10
@@ -70,7 +70,7 @@ services:
       - default
   minio:
     container_name: minio
-    image: quay.io/minio/minio:RELEASE.2023-12-23T07-19-11Z
+    image: quay.io/minio/minio:RELEASE.2024-01-31T20-20-33Z
     ports:
       - "9000:9000"
       - "9001:9001"
