--- a/conf/config-dev.yaml
+++ b/conf/config-dev.yaml
@@ -121,7 +121,9 @@ daemon:
       network: sigma
     kubernetes:
       kubeconfig:
-      namespace:
+      namespace: default
+    podman:
+      uri: unix:///run/podman/podman.sock
 
 auth:
   admin:
