--- a/conf/config.yaml
+++ b/conf/config.yaml
@@ -129,7 +129,9 @@ daemon:
       network: sigma
     kubernetes:
       kubeconfig:
-      namespace:
+      namespace: default
+    podman:
+      uri: unix:///run/podman/podman.sock
 
 auth:
   admin:
