--- a/conf/config-dev.yaml
+++ b/conf/config-dev.yaml
@@ -96,6 +96,11 @@ storage:
     region: cn-north-1
     bucket: sigma
     forcePathStyle: true
+  oss:
+    ak: sigma
+    sk: sigma-sigma
+    endpoint: http://127.0.0.1:9000
+    forcePathStyle: true
 
 # Notice: the tag never update after the first pulled from remote registry, unless you delete the image and pull again.
 proxy:
