--- a/conf/config-full.yaml
+++ b/conf/config-full.yaml
@@ -99,6 +99,16 @@ storage:
     region: cn-north-1
     bucket: sigma
     forcePathStyle: true
+  cos:
+    ak: sigma
+    sk: sigma-sigma
+    endpoint: https://hack-1251887554.cos.na-toronto.myqcloud.com
+  oss:
+    ak: sigma
+    sk: sigma-sigma
+    endpoint: http://127.0.0.1:9000
+    forcePathStyle: true
+
 # Notice: the tag never update after the first pulled from remote registry, unless you delete the image and pull again.
 proxy:
   enabled: false
