--- a/conf/config.yaml
+++ b/conf/config.yaml
@@ -101,9 +101,14 @@ storage:
     bucket: sigma
     forcePathStyle: true
   cos:
-    ak: xxxx
-    sk: xxxx
-    endpoint: https://xxxxxxx
+    ak: sigma
+    sk: sigma-sigma
+    endpoint: https://hack-1251887554.cos.na-toronto.myqcloud.com
+  oss:
+    ak: sigma
+    sk: sigma-sigma
+    endpoint: http://127.0.0.1:9000
+    forcePathStyle: true
 
 # Notice: the tag never update after the first pulled from remote registry, unless you delete the image and pull again.
 proxy:
