--- a/.github/workflows/image-build.yml
+++ b/.github/workflows/image-build.yml
@@ -67,6 +67,7 @@ jobs:
           labels: ${{ steps.meta.outputs.labels }}
           provenance: false
           sbom: false
+          outputs: oci-mediatypes=true,compression=zstd,compression-level=12,force-compression=true,type=image
   image-build-debian:
     name: image-build-debian
     runs-on: ubuntu-22.04
@@ -121,6 +122,7 @@ jobs:
           labels: ${{ steps.meta.outputs.labels }}
           provenance: false
           sbom: false
+          outputs: oci-mediatypes=true,compression=zstd,compression-level=12,force-compression=true,type=image
   image-build-builder:
     name: image-build-builder
     runs-on: ubuntu-22.04
@@ -173,3 +175,4 @@ jobs:
           labels: ${{ steps.meta.outputs.labels }}
           provenance: false
           sbom: false
+          outputs: oci-mediatypes=true,compression=zstd,compression-level=12,force-compression=true,type=image
