--- a/web/package.json
+++ b/web/package.json
@@ -24,6 +24,7 @@
     "csstype": "^3.1.3",
     "dayjs": "^1.11.10",
     "flowbite": "^2.3.0",
+    "flowbite-react": "^0.7.2",
     "human-format": "^1.2.0",
     "lodash": "^4.17.21",
     "monaco-editor": "^0.46.0",
@@ -52,7 +53,7 @@
     "typescript": "^5.3.3",
     "vite": "^5.1.3"
   },
-  "packageManager": "yarn@4.0.2",
+  "packageManager": "yarn@4.1.0",
   "importSort": {
     ".js, .jsx, .es6, .es, .mjs, .ts, .tsx": {
       "parser": "babylon",
