--- a/web/package.json
+++ b/web/package.json
@@ -23,7 +23,8 @@
     "cron-parser": "^4.9.0",
     "csstype": "^3.1.3",
     "dayjs": "^1.11.10",
-    "flowbite": "^2.2.1",
+    "flowbite": "^2.3.0",
+    "flowbite-react": "^0.7.2",
     "human-format": "^1.2.0",
     "lodash": "^4.17.21",
     "monaco-editor": "^0.46.0",
@@ -32,7 +33,7 @@
     "react-helmet-async": "^2.0.4",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1",
-    "react-router-dom": "^6.22.0",
+    "react-router-dom": "^6.22.1",
     "react-toastify": "^10.0.4",
     "react-use": "^17.5.0",
     "xterm": "^5.3.0",
@@ -40,8 +41,8 @@
     "xterm-addon-fit": "^0.8.0"
   },
   "devDependencies": {
-    "@types/node": "^20.11.17",
-    "@types/react": "^18.2.55",
+    "@types/node": "^20.11.19",
+    "@types/react": "^18.2.56",
     "@types/react-dom": "^18.2.19",
     "@vitejs/plugin-react-swc": "^3.6.0",
     "autoprefixer": "^10.4.17",
@@ -50,9 +51,9 @@
     "postcss": "^8.4.35",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.3.3",
-    "vite": "^5.1.1"
+    "vite": "^5.1.3"
   },
-  "packageManager": "yarn@4.0.2",
+  "packageManager": "yarn@4.1.0",
   "importSort": {
     ".js, .jsx, .es6, .es, .mjs, .ts, .tsx": {
       "parser": "babylon",
