--- a/.github/workflows/image-build.yml
+++ b/.github/workflows/image-build.yml
@@ -43,12 +43,19 @@ jobs:
           registry: ghcr.io
           username: tosone
           password: ${{ secrets.GHCR_TOKEN }}
+      - name: Login to Docker Hub
+        uses: docker/login-action@v3
+        if: ${{ github.event_name != 'pull_request' }}
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_PASSWORD }}
       - name: Docker meta
         id: meta
         uses: docker/metadata-action@v5
         with:
           images: |
             ghcr.io/${{ github.repository }}
+            docker.io/tosone/sigma
           tags: |
             type=ref,event=pr
             type=ref,event=branch,enable=${{ github.ref != 'refs/heads/main' }}
@@ -67,7 +74,7 @@ jobs:
           labels: ${{ steps.meta.outputs.labels }}
           provenance: false
           sbom: false
-          outputs: oci-mediatypes=true,compression=zstd,compression-level=12,force-compression=true,type=image
+          outputs: oci-mediatypes=true,compression=zstd,compression-level=19,force-compression=true,type=image
   image-build-debian:
     name: image-build-debian
     runs-on: ubuntu-22.04
@@ -96,12 +103,19 @@ jobs:
           registry: ghcr.io
           username: tosone
           password: ${{ secrets.GHCR_TOKEN }}
+      - name: Login to Docker Hub
+        uses: docker/login-action@v3
+        if: ${{ github.event_name != 'pull_request' }}
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_PASSWORD }}
       - name: Docker meta
         id: meta
         uses: docker/metadata-action@v5
         with:
           images: |
             ghcr.io/${{ github.repository }}
+            docker.io/tosone/sigma
           flavor: |
             latest=false
           tags: |
@@ -122,7 +136,7 @@ jobs:
           labels: ${{ steps.meta.outputs.labels }}
           provenance: false
           sbom: false
-          outputs: oci-mediatypes=true,compression=zstd,compression-level=12,force-compression=true,type=image
+          outputs: oci-mediatypes=true,compression=zstd,compression-level=19,force-compression=true,type=image
   image-build-builder:
     name: image-build-builder
     runs-on: ubuntu-22.04
@@ -151,12 +165,19 @@ jobs:
           registry: ghcr.io
           username: tosone
           password: ${{ secrets.GHCR_TOKEN }}
+      - name: Login to Docker Hub
+        uses: docker/login-action@v3
+        if: ${{ github.event_name != 'pull_request' }}
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_PASSWORD }}
       - name: Docker meta
         id: meta
         uses: docker/metadata-action@v5
         with:
           images: |
             ghcr.io/${{ github.repository }}-builder
+            docker.io/tosone/sigma-builder
           tags: |
             type=ref,event=pr
             type=ref,event=branch,enable=${{ github.ref != 'refs/heads/main' }}
@@ -175,4 +196,4 @@ jobs:
           labels: ${{ steps.meta.outputs.labels }}
           provenance: false
           sbom: false
-          outputs: oci-mediatypes=true,compression=zstd,compression-level=12,force-compression=true,type=image
+          outputs: oci-mediatypes=true,compression=zstd,compression-level=19,force-compression=true,type=image
