--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,7 @@ services:
       - /var/run/docker.sock:/var/run/docker.sock
       - ${PWD}/conf:/etc/sigma
     healthcheck:
-      test: ["CMD", "sh", "-c", "nc -z localhost 3000"]
+      test: ["CMD", "curl", "--fail", "-s", "http://localhost:3000/healthz"]
       interval: 10s
       timeout: 5s
       retries: 10
