--- a/docs/package.json
+++ b/docs/package.json
@@ -27,6 +27,7 @@
   },
   "devDependencies": {
     "@docusaurus/module-type-aliases": "^3.1.1",
+    "@docusaurus/tsconfig": "^3.1.1",
     "@tsconfig/docusaurus": "^2.0.2",
     "typescript": "^5.3.3"
   },
@@ -45,5 +46,5 @@
   "engines": {
     "node": ">=16.14"
   },
-  "packageManager": "yarn@4.0.2"
+  "packageManager": "yarn@4.1.1"
 }
