--- a/web/package.json
+++ b/web/package.json
@@ -27,13 +27,13 @@
     "flowbite-react": "^0.7.2",
     "human-format": "^1.2.0",
     "lodash": "^4.17.21",
-    "monaco-editor": "^0.46.0",
+    "monaco-editor": "^0.47.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet-async": "^2.0.4",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1",
-    "react-router-dom": "^6.22.1",
+    "react-router-dom": "^6.22.3",
     "react-toastify": "^10.0.4",
     "react-use": "^17.5.0",
     "xterm": "^5.3.0",
@@ -41,23 +41,18 @@
     "xterm-addon-fit": "^0.8.0"
   },
   "devDependencies": {
-    "@types/node": "^20.11.21",
-    "@types/react": "^18.2.60",
-    "@types/react-dom": "^18.2.19",
+    "@types/node": "^20.11.25",
+    "@types/react": "^18.2.64",
+    "@types/react-dom": "^18.2.21",
     "@vitejs/plugin-react-swc": "^3.6.0",
-    "autoprefixer": "^10.4.17",
-    "cssnano": "^6.0.5",
+    "autoprefixer": "^10.4.18",
+    "cssnano": "^6.1.0",
     "json-server": "^1.0.0-alpha.23",
     "postcss": "^8.4.35",
+    "postcss-nesting": "^12.1.0",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5.3.3",
-    "vite": "^5.1.4"
+    "typescript": "^5.4.2",
+    "vite": "^5.1.5"
   },
-  "packageManager": "yarn@4.1.0",
-  "importSort": {
-    ".js, .jsx, .es6, .es, .mjs, .ts, .tsx": {
-      "parser": "babylon",
-      "style": "renke"
-    }
-  }
+  "packageManager": "yarn@4.1.1"
 }
