--- a/conf/config.yaml
+++ b/conf/config.yaml
@@ -44,7 +44,7 @@ cache:
 
 workqueue:
   # the workqueue type available: redis, kafka, database, inmemory
-  type: database
+  type: inmemory
   redis:
     concurrency: 10
   kafka: {}
