--- a/web/package.json
+++ b/web/package.json
@@ -12,7 +12,7 @@
     "@bytemd/plugin-gfm": "^1.21.0",
     "@bytemd/react": "^1.21.0",
     "@headlessui/react": "^1.7.18",
-    "@heroicons/react": "^2.1.1",
+    "@heroicons/react": "^2.1.3",
     "@monaco-editor/react": "^4.6.0",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/forms": "^0.5.7",
@@ -24,7 +24,7 @@
     "csstype": "^3.1.3",
     "dayjs": "^1.11.10",
     "flowbite": "^2.3.0",
-    "flowbite-react": "^0.7.3",
+    "flowbite-react": "^0.7.5",
     "human-format": "^1.2.0",
     "lodash": "^4.17.21",
     "monaco-editor": "^0.47.0",
@@ -41,18 +41,19 @@
     "xterm-addon-fit": "^0.8.0"
   },
   "devDependencies": {
-    "@types/node": "^20.11.28",
-    "@types/react": "^18.2.66",
+    "@types/node": "^20.11.30",
+    "@types/react": "^18.2.69",
     "@types/react-dom": "^18.2.22",
     "@vitejs/plugin-react-swc": "^3.6.0",
-    "autoprefixer": "^10.4.18",
-    "cssnano": "^6.1.0",
+    "autoprefixer": "^10.4.19",
+    "cssnano": "^6.1.1",
     "json-server": "^1.0.0-alpha.23",
-    "postcss": "^8.4.35",
+    "postcss": "^8.4.38",
+    "postcss-import": "^16.1.0",
     "postcss-nesting": "^12.1.0",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5.4.2",
-    "vite": "^5.1.6"
+    "typescript": "^5.4.3",
+    "vite": "^5.2.4"
   },
   "packageManager": "yarn@4.1.1"
 }
